added 3 questions and exit trophy screen by swiping (fendy, joe)

--- a/app/src/main/res/layout/activity_question_two.xml
+++ b/app/src/main/res/layout/activity_question_two.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context=".TrophyActivity"
-    >
+    tools:context="cheesy.ultra.mundane.trophies.swipy.QuestionTwoActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -17,7 +16,7 @@
         android:textStyle="bold"
         android:textSize="50sp"
         android:gravity="center"
-        android:text="@string/question_one" />
+        android:text="@string/question_two" />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
@@ -39,9 +38,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/dummy_button"
-                android:onClick="onDummyButtonClickListener"
-                />
+                android:text="@string/dummy_button" />
 
         </LinearLayout>
     </FrameLayout>
